Added a styling sheet and made some changes to the file

--- a/style Pr1.css
+++ b/style Pr1.css
@@ -1,9 +1,21 @@
-h3{
-color:#006400
+p1{
+    color: #910696;
+
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+h2{
+    color:#25008b;
+    text-decoration-line: underline;
 }
 
-div {
+
+h3{
+color:#006400;
+
+}
+
+div{
 color:#8d0707;
 background:#ebc58d;
-border:#8b060dc9;
+border: 2px solid #056805;
 }
