--- a/style Pr1.css
+++ b/style Pr1.css
@@ -15,7 +15,10 @@ color:#006400;
 }
 
 div{
-color:#8d0707;
+color:#8d0707;font-size: 20px;
 background:#ebc58d;
 border: 2px solid #056805;
+}
+p{
+    font-size: 18px;
 }
