--- a/CSS styling/My style.css
+++ b/CSS styling/My style.css
@@ -8,6 +8,8 @@
 .heading {
   border: 2px solid balck;
   margin-left: 10px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 .nav {
   display: flex;
