--- a/CSS styling/MyStyle.css
+++ b/CSS styling/MyStyle.css
@@ -6,10 +6,16 @@
   height: 70px;
 }
 .heading {
-  border: 2px solid balck;
   margin-left: 10px;
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
+}
+h4 {
+  margin-left: 10px;
+  padding-top: 15px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  font-size: 17px;
 }
 .nav {
   display: flex;
@@ -44,6 +50,10 @@
 
 .icon-head {
   display: flex;
+}
+.icon-footer {
+  display: flex;
+  margin-left: 0px;
 }
 
 .anc {
@@ -87,11 +97,14 @@ h3 {
   background-repeat: no-repeat;
   display: flex;
   justify-content: space-between;
-  height: 280px;
+  height: 320px;
 }
 .footer {
   height: 300px;
   width: 250px;
+  border: 2px solid #0f0f58;
+  padding: 20px;
+  padding-top: 0px;
 }
 .icon-foot {
   display: flex;
@@ -108,9 +121,64 @@ h3 {
   border-radius: 10px;
   background-color: #5ca0e0;
 }
-p2,
-h4 {
+p2 {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-
   color: #0f0f58;
+}
+.container {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: cover;
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 1.5rem;
+}
+.gallery_img {
+  width: 100%;
+  height: 100%;
+  object-fit: inherit;
+  display: block;
+  border-radius: 7px;
+}
+.gallery_item--1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.gallery_item--2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+.gallery_item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 6;
+}
+.gallery_item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 6;
+}
+.gallery_item--5 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 6;
+  grid-row-end: 9;
+}
+.gallery_item--6 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 6;
+  grid-row-end: 9;
 }
