--- a/a Coding Cover Page.css
+++ b/a Coding Cover Page.css
@@ -13,12 +13,12 @@
   font-weight: 500;
   padding: 10px;
   margin: 10px;
-  font-size: 30px;
+  font-size: 50px;
 }
 .card {
   background-color: #00000080;
   border: 4px solid #48ee59;
-  height: 100px;
-  width: 100vw;
-  align-content: center;
+  padding: 80px;
+  margin-left: 60px;
+  margin-right: 60px;
 }
