--- a/30th April/book store.css
+++ b/30th April/book store.css
@@ -1,76 +1,134 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
 
-.card1 {
-  align-items: center;
-  justify-content: space-between;
+body {
+  background-color: #1b1b1b;
   padding: 20px;
-  margin: 20px;
-  background-color: #15a9ff;
+}
+
+.top_container {
+  background-color: #1b1b1b;
+
+  height: 100vh;
+  padding: 20px;
+}
+.top_Main_heading {
   color: white;
-  border-radius: 20px;
+  font-family: "Bree serif";
+  font-size: 28px;
 }
-.card2 {
-  align-items: left;
-  justify-content: space-between;
-  padding: 20px;
-  margin: 20px;
+.top_card_container {
   background-color: #e6f6ff;
-  color: #323f4b;
-  border-radius: 20px;
+  border-radius: 10px;
+  height: 155px;
+}
+.top_img1 {
+  height: 155px;
+  width: 120px;
+}
+.top_text_container {
+  padding: 14px;
+}
+.top_heading1 {
+  color: #183b56;
+  font-family: "Bree Serif";
+  font-size: 16px;
+  font-weight: 500;
+}
+.top_para1 {
+  font-family: "Bree Serif";
+  color: #06070d;
+  font-weight: 500;
+  font-size: 12px;
+}
+.top_para2 {
+  color: #183b56;
+  font-family: "Bree Serif";
+  font-weight: 500;
+  font-size: 12px;
 }
 
-.card3 {
-  align-items: left;
-  justify-content: space-between;
+.top_heading2 {
+  color: #183b56;
+  font-family: "Bree Serif";
+  font-size: 9px;
+  font-weight: 500;
+}
+.top_button {
+  font-family: "Roboto";
+  font-size: 10px;
+}
+
+.center_container {
+  margin-top: 10px;
+}
+.center_Main_heading {
+  color: white;
+  font-family: "Bree serif";
+  font-size: 18px;
+}
+.center_card_container {
+  height: 120px;
+}
+.center_img1 {
+  height: 120px;
+  width: 80px;
+}
+.center_text_container {
+  padding: 10px;
+}
+.center_heading1 {
+  color: white;
+  font-family: "Bree Serif";
+  font-size: 14px;
+  font-weight: 500;
+}
+.center_para1 {
+  font-family: "Bree Serif";
+  color: #e4e7eb;
+  font-size: 10px;
+}
+
+.center_button {
+  font-family: "Roboto";
+  font-size: 10px;
+}
+
+.bottom_card_container {
+  margin-top: 10px;
+}
+.bottom_img1 {
+  height: 120px;
+  width: 80px;
+}
+
+.book_detailspage {
+  background-color: #1b1b1b;
+  width: 100vw;
+  height: 100vh;
   padding: 20px;
-  margin: 20px;
-  background-color: #add9f3;
-  color: #323f4b;
-  border-radius: 20px;
 }
 
-.sub-card1 {
-  align-items: left;
-  justify-content: space-between;
-  background-color: #ffffff;
-  border-radius: 20px;
+.heading1 {
+  font-family: "Bree Serif";
+  color: white;
+  font-size: 26px;
 }
-
-.para {
-  font-family: Roboto;
-  color: #191e3a;
-  font-weight: 200px;
-  padding: 20px;
-  align-items: center;
-  font-size: 20px;
+.heading6 {
+  font-family: "Bree Serif";
+  color: #9aa5b1;
+  font-size: 12px;
 }
-.p {
-  color: #191e3a;
-  font-weight: 200px;
-  padding: 20px;
-  align-items: center;
-  font-size: 20px;
+.para1 {
+  font-family: "Bree Serif";
+  color: #e4e7eb;
+  font-size: 10px;
+  text-align: Left;
+  margin-top: 16px;
 }
-
-.text {
-  font-family: Roboto;
-  color: #191e3a;
+.button {
+  margin-left: 5px;
 }
-.heading {
-  font-family: Bree Serif;
-  color: #191e3a;
-}
-
-.body {
-  display: flex;
-  align-items: space-between;
-  margin: 20px;
-  background-color: #e7bbbb;
-}
-.image {
-  display: block;
-}
-.embed-responsive {
-  margin: 10px;
-  border-radius: 20px;
+.text_align {
+  text-align: center;
+  margin-top: 16px;
 }
