--- a/30th April/My project.css
+++ b/30th April/My project.css
@@ -1,14 +1,12 @@
-.a {
+.bottom {
   margin: 15px;
   padding: 15px;
 }
-.flex {
-  margin: 10px;
-}
+
 img {
   margin: 15px;
-  height: 200px;
-  width: 300px;
+  height: 180px;
+  width: 250px;
   border-radius: 10px;
 }
 .card1 {
@@ -16,6 +14,10 @@ img {
 }
 .back1 {
   text-align: center;
+}
+
+#section1 {
+  margin: 50px;
 }
 
 .advanced-technologies-bg-container {
@@ -50,4 +52,26 @@ img {
   font-family: Roboto;
   font-size: 12px;
   font-weight: 500;
+}
+
+.mobile-specifications-bg-container {
+  background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/iphoneX-bg.png");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+}
+.mobile-specifications-card {
+  background-color: white;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
+  padding: 20px;
+}
+.mobile-specifications-title {
+  color: #5752ab;
+  font-family: "Bree Serif";
+  font-size: 24px;
+}
+.mobile-specifications-description {
+  color: #323f4b;
+  font-family: "Roboto";
 }
