--- a/30th April/My project.css
+++ b/30th April/My project.css
@@ -1,12 +1,16 @@
-.bottom {
+@import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.bottom-container {
   margin: 15px;
   padding: 15px;
+  display: flex;
+  justify-content: center;
 }
 
 img {
   margin: 15px;
-  height: 180px;
-  width: 250px;
+  height: 230px;
+  width: 300px;
   border-radius: 10px;
 }
 .card1 {
@@ -62,16 +66,84 @@ img {
 }
 .mobile-specifications-card {
   background-color: white;
+
+  padding: 30px;
+  color: #0a1f44;
+  font-family: "Roboto";
+  font-weight: 200px;
+
+  border-radius: 0px;
+}
+
+.food-order-bg-container {
+  background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/foodbg.png");
+  height: 100vh;
+  width: 100vw;
+  background-size: cover;
+}
+.food-order-card {
+  background-color: #f6c56e;
+  height: 200px;
+  width: 100vw;
+  padding: 20px;
+  font-family: Roboto;
+  font-weight: 900;
+  color: #323f4b;
+  border: 2px solid #f6c56e;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
-  padding: 20px;
+  text-align: center;
 }
-.mobile-specifications-title {
-  color: #5752ab;
+.food-order-title {
+  color: #323f4b;
   font-family: "Bree Serif";
   font-size: 24px;
 }
-.mobile-specifications-description {
+.food-order-description {
   color: #323f4b;
   font-family: "Roboto";
+}
+.food-order-button {
+  border: 2px solid white;
+
+  border-radius: 10px;
+  padding: 10px;
+  width: 150px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: 500;
+
+  color: #171f46;
+
+  margin-right: 5px;
+}
+
+.newspaper-bg-container {
+  background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-static-website/newsbg.png");
+  width: 100vw;
+  height: 100vh;
+  background-size: cover;
+}
+.newspaper-card {
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  padding: 20px;
+  background-color: #ffffff;
+}
+.newspaper-heading.h3 {
+  color: #323f4b;
+  font-weight: 500;
+}
+newspaper-heading.p {
+  color: #7b8794;
+  font-weight: 500;
+}
+.newspaper-button {
+  background-color: #323f4b;
+  border-radius: 10px;
+  padding: 10px;
+  width: 130px;
+  text-align: center;
+  color: white;
+  border: 1px solid #d7dfe9;
 }
