--- a/coding-practise- 08th May/VR Website Trending Blogs Section.css
+++ b/coding-practise- 08th May/VR Website Trending Blogs Section.css
@@ -1,1 +1,37 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.bg-container {
+  background-color: white;
+  width: 100vw;
+}
+
+.h1 {
+  color: #1f2933;
+  font-size: 26px;
+  font-weight: bold;
+}
+h1 {
+  color: #959ead;
+  font-size: 15px;
+}
+button {
+  color: white;
+  background-color: #1754a1;
+  border-width: 0px;
+  border-radius: 6px;
+  width: 100px;
+  font-size: 12px;
+  padding: 8px;
+}
+p {
+  color: #323f4b;
+  font-weight: 500;
+}
+a {
+  font-weight: bold;
+  font-size: 12px;
+  color: #1754a1;
+}
+.card-container {
+  border-radius: 6px;
+}
