--- a/coding-practise- 08th May/VR Website Contact Us Section.css
+++ b/coding-practise- 08th May/VR Website Contact Us Section.css
@@ -1,1 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.bg-container {
+  background-color: #222b36;
+  height: 100vh;
+  width: 100vw;
+}
+h1 {
+  color: white;
+  font-size: 25px;
+  font-weight: bold;
+}
+button {
+  color: white;
+  background-color: transparent;
+  font-size: 15px;
+  padding: 5px;
+  border-radius: 6px;
+  width: 100px;
+  text-align: center;
+  border-color: white;
+}
