--- a/coding-practise- 08th May/VR Website Features Section.css
+++ b/coding-practise- 08th May/VR Website Features Section.css
@@ -1,1 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+h1 {
+  font-size: 15px;
+  margin-top: 10px;
+}
+p {
+  color: #7b8794;
+  font-size: 12px;
+}
+p1 {
+  font-style: italic;
+  font-weight: bold;
+  color: black;
+}
+.h1 {
+  color: #1f2933;
+  font-size: 25px;
+  font-weight: bold;
+}
+img {
+  height: 50px;
+}
