--- a/Coding-practise- 09th May/Portfolio Website Testimonials Section.css
+++ b/Coding-practise- 09th May/Portfolio Website Testimonials Section.css
@@ -1,1 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.main-bg-container {
+  background-color: #1f2933;
+  padding: 25px;
+}
+
+#h1 {
+  color: #cced00;
+  font-size: 22px;
+}
+
+.h1 {
+  color: white;
+  font-weight: bold;
+}
+h1 {
+  color: white;
+}
+
+p {
+  color: #9aa5b1;
+}
+.card-bg-container {
+  background-color: #323f4b;
+
+  text-align: center;
+  padding: 30px;
+}
+.para {
+  color: white;
+  font-weight: 500;
+}
+img {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
