--- a/Coding-practise- 09th May/Portfolio Website Footer Section.css
+++ b/Coding-practise- 09th May/Portfolio Website Footer Section.css
@@ -1,1 +1,41 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.bg-container {
+  background-color: #0d2436;
+}
+
+img {
+  height: 100px;
+  border-radius: 50%;
+  margin-right: 30px;
+}
+
+#h1 {
+  color: #cced00;
+  font-size: 28px;
+  font-weight: bold;
+}
+h1 {
+  color: #cced00;
+  font-size: 28px;
+  font-weight: bold;
+}
+.bi {
+  padding-right: 10px;
+}
+
+p {
+  color: #9aa5b1;
+  font-size: 22px;
+
+  margin-top: 16px;
+}
+.icon {
+  font-size: 36px;
+  color: #5a7184;
+  margin-right: 12px;
+}
+
+.bottom-bg-container {
+  background-color: #001c32;
+}
