--- a/Coding-practise- 09th May/Portfolio Website Services Section.css
+++ b/Coding-practise- 09th May/Portfolio Website Services Section.css
@@ -1,1 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+@import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.main-bg-container {
+  background-color: #52606d;
+}
+
+#h1 {
+  color: #cced00;
+  font-size: 26px;
+}
+.h1 {
+  color: white;
+  font-size: 26px;
+}
+
+p {
+  color: #9aa5b1;
+  font-size: 20px;
+}
+img {
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+.card-container {
+  background-color: #323f4b;
+  border-radius: 12px;
+}
+
+h1 {
+  color: white;
+  font-size: 26px;
+}
+
+.card-container1 {
+  height: 150px;
+  width: 1700px;
+  background-color: #323f4b;
+  border-radius: 12px;
+}
