--- a/Coding-practise- 09th May/Portfolio Website Projects Section.css
+++ b/Coding-practise- 09th May/Portfolio Website Projects Section.css
@@ -1,1 +1,43 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.top-bg-container {
+  background-color: #3e4c59;
+  padding-top: 25px;
+}
+
+h1 {
+  color: #cced00;
+  font-size: 25px;
+  margin-left: 13px;
+  margin-bottom: 12px;
+}
+
+.h1 {
+  color: white;
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 18px;
+}
+
+#h1 {
+  margin-bottom: 12px;
+  margin-top: 12px;
+  color: #9aa5b1;
+  font-size: 16px;
+}
+.card-container {
+  background-color: #323f4b;
+  padding-bottom: 25px;
+  border-radius: 13px;
+  margin-bottom: 25px;
+}
+
+p {
+  color: #9aa5b1;
+  margin-left: 13px;
+  font-size: 22px;
+}
+.read-more {
+  color: #cced00;
+  margin-left: 13px;
+}
