--- a/Coding-practise - 11th May/Ecommerce Website Contact Us Section.css
+++ b/Coding-practise - 11th May/Ecommerce Website Contact Us Section.css
@@ -1,1 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.bg-container {
+  background-color: #f5f7fa;
+}
+h1 {
+  color: #183b56;
+  font-family: "Roboto";
+  font-weight: bold;
+  font-size: 50px;
+}
+button {
+  border-color: #ff9f00;
+  color: #ff9f00;
+  background-color: transparent;
+  width: 200px;
+  height: 50px;
+  font-size: 26px;
+}
