--- a/Coding-practise - 11th May/Ecommerce Website Services Section.css
+++ b/Coding-practise - 11th May/Ecommerce Website Services Section.css
@@ -1,1 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+.para {
+  color: #616c7c;
+  font-size: 18px;
+  font-weight: 450;
+  font-family: "Roboto";
+}
+h1 {
+  color: #1f2933;
+  font-size: 25px;
+  font-family: "Roboto";
+}
+p {
+  color: #7b8794;
+  font-size: 16px;
+  font-family: "Roboto";
+}
+#h1 {
+  color: #183b56;
+  font-weight: bold;
+  font-size: 30px;
+  font-family: "Roboto";
+}
