--- a/Coding-practise - 11th May/Ecommerce Website Products Section.css
+++ b/Coding-practise - 11th May/Ecommerce Website Products Section.css
@@ -1,1 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Bree Serif&family=Roboto");
+
+.product-image-1 {
+  background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-products-headphones-bg.png");
+  background-size: cover;
+  height: 100vh;
+  border-radius: 10px;
+}
+.product-image-2 {
+  background-image: url("https://d1tgh8fmlzexmh.cloudfront.net/ccbp-responsive-website/ecommerce-products-laptops-bg.png");
+  background-size: cover;
+  height: 100vh;
+  border-radius: 10px;
+}
+
+#arrow {
+  color: #ff9f00;
+  font-weight: bold;
+}
+button {
+  background-color: white;
+  color: #ff9f00;
+  border-color: white;
+  border-radius: 20px;
+  width: 120px;
+  height: 40px;
+  font-weight: bold;
+}
+.h1 {
+  color: white;
+}
+p {
+  color: white;
+}
+h1 {
+  color: #323f4b;
+  font-weight: bold;
+}
+.modal-para {
+  color: #323f4b;
+  font-size: 13px;
+}
